# moleculetda

./: .bumpversion.cfg  .flake8  .gitignore  CONTRIBUTING.rst  LICENSE  Legal.txt  README.md  construct_pd.py  cubic_transformation.py  dist_builder.py  license.txt  main.py  pyproject.toml  read_file.py  requirements.txt  setup.cfg  setup.py  structure_to_vectorization.py  tox.ini  vectorize_pds.py
.github/workflows/: release.yml  tests.yml
docs/: Makefile
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: comparisons.ipynb
src/moleculetda/: cli.py  construct_pd.py  io.py  plotting.py  read_file.py  structure_to_vectorization.py  version.py
src/moltda/: cli.py  construct_pd.py  io.py  read_file.py  structure_to_vectorization.py  vectorize_pds.py  version.py
tests/: conftest.py  regtest.py  test_version.py
tests/test_files/: str_m4_o1_o1_acs_sym.10.cif
