[tool.poetry]
name = "molecule-tda"
version = "0.1.0"
description = "Toolkit for using topological data analysis representations."
authors = ["Aditi Krishnapriyan <akrishnapriyan@lbl.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
dionysus = "^2.0"
sklearn = "^0.0.0"
diode = {git = "https://github.com/mrzv/diode.git"}
numpy = "^1.18.1"
pyclustering = "^0.9.3"
pymatgen = "^2022.3.29"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
