
[metadata]
name = molecule-tda
version = 0.1.0
description = Toolkit for using topological data analysis representations.
author = Aditi Krishnapriyan 
author_email = akrishnapriyan@lbl.gov
maintainer_email = akrishnapriyan@lbl.gov 
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/a1k12/molecule-tda
download_url =https://github.com/a1k12/molecule-tdal/releases
project_urls =
    Bug Tracker = https://github.com/a1k12/molecule-tda/issues
    Source Code = https://github.com/a1k12/molecule-tda/


license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =



[options]
install_requires =
    scikit-learn
    dionysus 
    numpy
    pyclustering
    pymatgen
    diode
    loguru
    click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src



[options.entry_points]
console_scripts =
    moltda = moltda.cli:run

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = moltda
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/moltda
    .tox/*/lib/python*/site-packages/moltda

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
